--- a/css/styles.css
+++ b/css/styles.css
@@ -590,6 +590,7 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-b
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 72px 24px 24px 24px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     
 }
 .modal-close-btn {
@@ -637,15 +638,17 @@ fill: #FFFFFF
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-bottom: 24px;
+    margin-bottom: 16px;
 }
 .review-form-input {
     border-radius: 4px;
     width: 360px;
-    height: 58px;
+    height: 40px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     padding-left: 38px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+background-color: transparent;
+outline: transparent;
 }
 .review-form-field-wrapper {
     margin-bottom: 8px;
@@ -698,7 +701,9 @@ margin-bottom: 4px;
 
     color: rgba(46, 47, 66, 0.4);
 }
-
+.review-form-checkbox-wrapper {
+    margin-bottom: 24px;
+}
 .review-form-message:focus {
     border-color: #4D5AE5;
     outline: transparent;
@@ -708,7 +713,7 @@ margin-bottom: 4px;
    
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
@@ -724,10 +729,11 @@ margin-bottom: 4px;
     cursor: pointer;
     fill: transparent;
     margin-right: 8px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .review-form-privacy-checkbox:checked+.review-form-checkbox-label .review-form-own-checkbox {
     background-color: #4D5AE5;
-    fill: #FFFFFF;
+    fill: #F4F4FD;;
     border-color: #4D5AE5;
 }
 .review-form-privacy-checkbox:focus+.review-form-checkbox-label .review-form-own-checkbox {
@@ -742,7 +748,7 @@ outline: 1px solid rgba(46, 47, 66, 0.4);
 .review-form-submit-btn {
     display: block;
         margin: 0 auto;
-        color: #FFF;
+        color: #ffffff;
         font-family: "Roboto", sans-serif;
         font-size: 16px;
         font-style: normal;
@@ -815,7 +821,7 @@ outline: 1px solid rgba(46, 47, 66, 0.4);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #FFF;
+    color: #ffffff;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 500;
