--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,7 @@ background-color: transparent;
 outline: transparent;
 }
 .review-form-field-wrapper {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 .review-form-field-label { 
 display: block;
@@ -686,15 +686,19 @@ margin-bottom: 4px;
 .review-form-message {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
     height: 120px;
     resize: none;
-    padding: 5px 16px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 8px 16px;
+    
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
+    width: 100%;
+    
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .review-form-message::placeholder {
@@ -755,7 +759,7 @@ outline: 1px solid rgba(46, 47, 66, 0.4);
         font-weight: 500;
         line-height: 1.5;
         letter-spacing: 0.64px;
-        background: #4D5AE5;
+        background-color: #4D5AE5;
         border: none;
         border-radius: 4px;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
