--- a/css/styles.css
+++ b/css/styles.css
@@ -627,9 +627,7 @@ fill: #FFFFFF
 /* =========== /Backdrop Section styles =========== */
 
 /* =========== Rewiew form styles =========== */
-.review-form-checkbox-wrapper {
-    margin-bottom: 24px;
-}
+
 .review-form-description {
     
     font-weight: 500;
@@ -650,9 +648,7 @@ fill: #FFFFFF
 background-color: transparent;
 outline: transparent;
 }
-.review-form-field-wrapper {
-    margin-bottom: 16px;
-}
+
 .review-form-field-label { 
 display: block;
 font-weight: 400;
@@ -664,6 +660,18 @@ margin-bottom: 4px;
 }
 .review-form-input-wrapper {
     position: relative;
+}
+.review-form-field-wrapper-comment {
+    margin-bottom: 16px
+}
+.review-form-checkbox-wrapper-checkbox {
+    margin-bottom: 24px;
+}
+.review-form-checkbox-wrapper {
+    margin-bottom: 24px;
+}
+.review-form-field-wrapper {
+    margin-bottom: 8px;
 }
 .review-form-field-icon {
     position: absolute;
@@ -705,9 +713,8 @@ margin-bottom: 4px;
 
     color: rgba(46, 47, 66, 0.4);
 }
-.review-form-checkbox-wrapper {
-    margin-bottom: 24px;
-}
+
+
 .review-form-message:focus {
     border-color: #4D5AE5;
     outline: transparent;
@@ -735,12 +742,12 @@ margin-bottom: 4px;
     margin-right: 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.review-form-privacy-checkbox:checked+.review-form-checkbox-label .review-form-own-checkbox {
+.review-form-privacy-checkbox:checked + .review-form-checkbox-label .review-form-own-checkbox {
     background-color: #4D5AE5;
     fill: #F4F4FD;;
     border-color: #4D5AE5;
 }
-.review-form-privacy-checkbox:focus+.review-form-checkbox-label .review-form-own-checkbox {
+.review-form-privacy-checkbox:focus + .review-form-checkbox-label .review-form-own-checkbox {
 outline: 1px solid rgba(46, 47, 66, 0.4);
 }
 .privacy-policy-link {
@@ -774,6 +781,7 @@ outline: 1px solid rgba(46, 47, 66, 0.4);
 .review-form-submit-btn:focus {
     background-color: #404BBF;
 }
+
 
 /* =========== /Rewiew form styles =========== */
 /* =========== Footer subscribe styles =========== */
