--- a/css/styles.css
+++ b/css/styles.css
@@ -697,13 +697,12 @@ margin-bottom: 4px;
     height: 120px;
     resize: none;
     padding: 8px 16px;
-    
+    color: rgba(46, 47, 66, 0.4);
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     width: 100%;
-    
     background-color: transparent;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -743,9 +742,9 @@ margin-bottom: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .review-form-privacy-checkbox:checked + .review-form-checkbox-label .review-form-own-checkbox {
-    background-color: #4D5AE5;
+    background-color: #404bbf;
     fill: #F4F4FD;;
-    border-color: #4D5AE5;
+    border: none;
 }
 .review-form-privacy-checkbox:focus + .review-form-checkbox-label .review-form-own-checkbox {
 outline: 1px solid rgba(46, 47, 66, 0.4);
